deployments/openshift/kustomize/components/prod-resources/temporal-worker-memory.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-worker
spec:
  template:
    spec:
      containers:
        - name: temporal-worker
          resources:
            limits:
              memory: "1Gi"
